cabal-version:      2.4
name:               linear-geo
version:            0.1.0.0
synopsis:           Geographic coordinates, built on the linear package.
description:        Geographic coordinates, built on the linear package.

homepage:           https://github.com/TravisWhitaker/linear-geo
bug-reports:        https://github.com/TravisWhitaker/linear-geo
license:            MIT
license-file:       LICENSE
author:             Travis Whitaker
maintainer:         pi.boy.travis@gmail.com

copyright:          Travis Whitaker 2021
category:           Math
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Linear.Geo
                      Linear.Geo.ECEF
                      Linear.Geo.ENU
                      Linear.Geo.Geodetic
                      Linear.Geo.PlaneAngle
    --other-modules:
    build-depends:    base ^>=4.14.1.0
                    , adjunctions
                    , deepseq
                    , distributive
                    , lens
                    , linear
                    , vector
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -O2
                      -Wall
                      -Widentities
                      -Wredundant-constraints
                      -Wcompat
                      -Wno-type-defaults
                      -Werror

test-suite props
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0
                    , hedgehog
                    , linear
                    , linear-geo
    ghc-options:      -O2
                      -Wall
                      -Widentities
                      -Wredundant-constraints
                      -Wcompat
                      -Wno-type-defaults
                      -Werror
                      -threaded
                      -with-rtsopts=-N
